--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     compile 'com.roughike:bottom-bar:2.0.2'
     compile 'com.squareup.okhttp3:okhttp:3.9.0'
     compile 'org.jsoup:jsoup:1.10.1'
+    compile 'com.github.limuyang2:CardSearchView:1.0.6.9'
 }
