--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,16 @@ android {
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+
+            packagingOptions {
+                exclude 'META-INF/DEPENDENCIES'
+                exclude 'META-INF/NOTICE'
+                exclude 'META-INF/LICENSE'
+                exclude 'META-INF/LICENSE.txt'
+                exclude 'META-INF/NOTICE.txt'
+                exclude 'META-INF/ASL2.0'
+                exclude 'META-INF/notice.txt'
+            }
         }
     }
 }
@@ -34,8 +44,6 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'org.litepal.android:core:1.5.0'
     compile'com.android.support:support-v4:26+'
-    compile 'com.roughike:bottom-bar:2.0.2'
-    compile 'com.squareup.okhttp3:okhttp:3.9.0'
     compile 'org.jsoup:jsoup:1.10.1'
     compile 'com.github.limuyang2:CardSearchView:1.0.6.9'
 }
