--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,7 @@
         android:supportsRtl="true"
         android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/AppTheme">
-        <meta-data
-            android:name="com.baidu.lbsapi.API_KEY"
-            android:value="lVqrFBapuI16rKbgFVkAGjX9YFGFMnQf"/>
+
         <activity android:name=".FirstActivity">
 
             <intent-filter>
@@ -35,9 +33,11 @@
 
         <activity android:name=".InformationActivity"
             android:theme="@style/InformationActivityTheme"/>
-        <activity android:name=".EnterActivity" />
 
         <activity android:name=".AuthorActivity"
+            android:theme="@style/myDialogTheme"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".WebActivity"
             android:theme="@style/myDialogTheme"
             android:screenOrientation="portrait"/>
 
