--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,11 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
 
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
+
 
 
     <application
@@ -20,13 +25,26 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".FirstActivity">
 
-            <intent-filter>
+
+        <activity
+            android:name=".SplashActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
+            <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
 
+
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter >
+        </activity >
+
+
+
+
+        <activity android:name=".FirstActivity">
+
         </activity>
 
         <activity android:name=".InformationActivity"
@@ -43,6 +61,12 @@
             android:value=".SearchActivity"/>
         <activity android:name=".DownloadActivity"
             android:theme="@style/Theme.AppCompat.DayNight.Dialog"/>
+
+
+
+
     </application>
+
+
 
 </manifest>
